--- a/my-app/src/components/app/app.css
+++ b/my-app/src/components/app/app.css
@@ -1,7 +1,8 @@
 html,
 body {
-	margin: 0;
-	padding: 0;
+    max-width: 1280px;
+    padding: 0px 40px;	
+    margin: 0 auto;	
 }
 
 button {
@@ -21,6 +22,9 @@ button {
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
 	background: #f5f5f5;
@@ -35,6 +39,10 @@ body {
 
 :focus {
 	outline: 0;
+}
+
+.logo {
+    margin-top: 120px;
 }
 
 .hidden {
