--- a/my-app/src/components/app-filter/app-filter.css
+++ b/my-app/src/components/app-filter/app-filter.css
@@ -10,9 +10,11 @@
 
 .filters li {
 	display: inline;
+	
 }
 
-.filters li a {
+.btn {
+	cursor: pointer;
 	color: inherit;
 	margin: 3px;
 	padding: 3px 7px;
@@ -21,11 +23,11 @@
 	border-radius: 3px;
 }
 
-.filters li a:hover {
+.btn:hover {
 	border-color: rgba(175, 47, 47, 0.1);
 }
 
-.filters li a.selected {
+.btn.selected {
 	border-color: rgba(175, 47, 47, 0.2);
 }
 
