--- a/my-app/src/components/todo-add-item/todo-add-item.css
+++ b/my-app/src/components/todo-add-item/todo-add-item.css
@@ -1,5 +1,30 @@
 
 
+.toggle-all {
+	text-align: center;
+	border: none; /* Mobile Safari */
+	opacity: 0;
+	position: absolute;
+}
+
+.toggle-all + label {
+	width: 60px;
+	height: 34px;
+	font-size: 0;
+	position: absolute;
+	z-index: 999;
+	top: 16px;
+	left: 0px;
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+
+.toggle-all + label:before {
+	content: '❯';
+	font-size: 22px;
+	color: #e6e6e6;
+	padding: 10px 27px 10px 27px;
+}
 .todoapp input::-webkit-input-placeholder {
 	font-style: italic;
 	font-weight: 300;
