--- a/my-app/src/components/todo-add-item/todo-add-item.css
+++ b/my-app/src/components/todo-add-item/todo-add-item.css
@@ -60,12 +60,19 @@
 	border: 0;
 	color: inherit;
 	padding: 6px;
-	border: 1px solid #999;
-	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+new-todo,
+.edit:focus {
+	cursor: pointer;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+
 
 .new-todo {
 	padding: 16px 16px 16px 60px;
