--- a/my-app/src/components/todo-add-item/todo-add-item.css
+++ b/my-app/src/components/todo-add-item/todo-add-item.css
@@ -72,6 +72,12 @@ new-todo,
 	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
+new-todo,
+.destroy
+.edit:focus {
+	display: none;
+}
+
 
 
 .new-todo {
