feat add hidden footer

--- a/my-app/src/components/app-footer/app-footer.css
+++ b/my-app/src/components/app-footer/app-footer.css
@@ -1,5 +1,6 @@
 
 .footer {
+	display: none;
 	color: #777;
 	padding: 10px 15px;
 	height: 20px;
@@ -37,5 +38,9 @@ html .clear-completed:active {
 
 .clear-active {
 	display: none;
+}
+
+.footer-active {
+	display: block;
 }
 
