--- a/my-app/src/components/app-footer/app-footer.css
+++ b/my-app/src/components/app-footer/app-footer.css
@@ -28,6 +28,7 @@ html .clear-completed:active {
 	float: right;
 	position: relative;
 	line-height: 20px;
+	margin-top: -40px;
 	text-decoration: none;
 	cursor: pointer;
 }
